--- a/WordPress_Single_Instance.yaml
+++ b/WordPress_Single_Instance.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'AWS CloudFormation Sample Template WordPress_Single_Instance: WordPress
+Description: 'AWS CloudFormation Sample Template WordPress_Single_Instance adapted for Vocareum: WordPress
   is web software you can use to create a beautiful website or blog. This template
   installs WordPress with a local MySQL database for storage. It demonstrates using
   the AWS CloudFormation bootstrap scripts to deploy WordPress. **WARNING** This template
